# Hivebee

./: .gitignore  README.md  pyproject.toml
config/: default_config.yaml.example
hivebee/: __init__.py  ai.py  alerter.py  cli.py  generator.py  logger.py  monitor.py  parser.py  reporter.py  scanner.py  scorer.py
hivebee/display/: banner.py  panels.py  tables.py
